# lazyjira

./: .gitignore  Cargo.toml  NEXT_STEPS.md  PROJECT_STATUS.md  README.md
spec/: API_INTEGRATION.md  ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  SPECIFICATION.md  TDD_GUIDELINES.md
src/: lib.rs  main.rs
src/app/: commands.rs  mod.rs  state.rs  workflows.rs
src/domain/: mod.rs  validators.rs
src/domain/models/: board.rs  comment.rs  mod.rs  sprint.rs  ticket.rs  user.rs
src/domain/services/: filter_service.rs  mod.rs  ticket_service.rs
src/infrastructure/api/: client.rs  connection.rs  jira_cli_adapter.rs  jira_client.rs  mod.rs  parser.rs  rate_limiter.rs  retry.rs
src/infrastructure/config/: mod.rs
src/infrastructure/storage/: cache.rs
src/ui/: app.rs  events.rs  mod.rs  renderer.rs  theme.rs
src/ui/components/: mod.rs  ticket_detail.rs  ticket_list.rs  transition_list.rs
src/utils/: error.rs  logger.rs  mod.rs
tests/: api_client_test.rs  config_test.rs
tests/fixtures/: jira_responses.rs  mod.rs
tests/integration/: mod.rs
