[package]
name = "lazyjira"
version = "0.1.0"
edition = "2021"

[lib]
name = "lazyjira"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Async trait support
async-trait = "0.1"

# Base64 encoding
base64 = { version = "0.21", features = ["std"] }

# URL encoding
urlencoding = "2.1"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration file parsing
toml = "0.8"
serde_yaml = "0.9"

# Terminal UI
ratatui = "0.25"
crossterm = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Path handling
dirs = "5.0"

[dev-dependencies]
# Testing
mockito = "1.2"
tokio-test = "0.4"
tempfile = "3.8"

# Code coverage (optional)
# cargo-tarpaulin = "0.26"
